# workzy

./: LICENSE  log.txt  noxfile.py  pyproject.toml  test.db
docs/: conf.py  index.rst  license.rst
docs/_build/: .buildinfo  genindex.html  index.html  license.html  objects.inv  py-modindex.html  reference.html  search.html  searchindex.js
docs/_build/.doctrees/: environment.pickle  index.doctree  license.doctree  reference.doctree
docs/_build/_sources/: reference.rst.txt
tests/: test_workzy.py
tests/console/: test_process.py  test_workspace.py
tests/core/: test_db.py  test_process.py  test_workspace.py
tests/workspace/: test_workspace.py
workzy/: application.py
workzy/console/: cli.py  create.py  io_workspace.py  log.py  remove.py  run.py  show.py
workzy/core/: __init__.py  db.py  process.py  queue_process.py  workspace.py
