[tool.poetry]
name = "workzy"
version = "0.1.0"
description = "Manage workspaces easily throughout CLI"
license = "MIT"
homepage = "https://github.com/renantamashiro/workzy"
repository = "https://github.com/renantamashiro/workzy"
authors = ["renantamashiro <tamashirorenan@gmail.com>"]
keywords = ["workspaces"]

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.1.2"

[tool.poetry.scripts]
workzy = "workzy.application:main"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.6.0"
coverage = {extras = ["toml"], version = "^5.3"}
pytest-cov = "^2.10.1"
black = "^20.8b1"
flake8 = "^3.8.4"
flake8-black = "^0.2.1"
flake8-import-order = "^0.18.1"
sphinx = "^3.2.1"
sphinx-autodoc-typehints = "^1.11.0"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["workzy"]

[tool.coverage.report]
show_missing = true
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

